# rouse-context

./: .editorconfig  .gitignore  .signing  BLOCKERS.md  BLOCKERS_57.md  README.md  build.gradle.kts  glama.json  last_session  settings.gradle.kts
.claude/: CLAUDE.md  agent-preamble.md  settings.json
.signing/: release.properties.example
api/: build.gradle.kts
app/: build.gradle.kts  google-services.json  (+1 more)
relay/: Cargo.toml  README.md  relay.example.toml
relay/scripts/: backup-acme-key.sh
relay/src/: acme.rs  caa_check.rs  cloudflare_dns.rs  config.rs  crash.rs  device_ca.rs  dns.rs  dns_challenge.rs  fcm.rs  firebase_auth.rs  firestore.rs  firestore_client.rs  google_auth.rs  keypair_auth.rs  lib.rs  main.rs  maintenance.rs  passthrough.rs  push.rs  rate_limit.rs  router.rs  shutdown.rs  sni.rs  state.rs  subdomain.rs  test_mode.rs  tls.rs  unifiedpush.rs
relay/src/acme/: account.rs  client.rs  jws.rs  mod.rs  protocol.rs  types.rs
relay/src/api/: crash.rs  mod.rs  register.rs  renew.rs  request_subdomain.rs  rotate_secret.rs  status.rs  wake.rs  ws.rs
relay/src/mux/: connection.rs  frame.rs  lifecycle.rs  mod.rs
relay/src/words/: adjectives.rs  adjectives.txt  mod.rs  nouns.txt
relay/tests/: acme_eab_integration_test.rs  api_register_test.rs  api_renew_test.rs  api_rotate_secret_test.rs  api_status_test.rs  api_wake_test.rs  config_test.rs  crash_test.rs  integration_test.rs  maintenance_loop_test.rs  maintenance_test.rs  mux_frame_test.rs  mux_lifecycle_test.rs  passthrough_test.rs  rate_limit_test.rs  request_subdomain_test.rs  router_auth_split_test.rs  shutdown_test.rs  sni_test.rs  subdomain_test.rs  test_helpers.rs  valid_secrets_cache_test.rs
(+821 files in other folders)
