[package]
name = "rouse-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hyper = { version = "1", features = ["server", "http1"] }
tungstenite = "0.24"
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
bytes = "1"
thiserror = "2"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
base64 = "0.22"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
async-trait = "0.1"
dashmap = "6"

[dev-dependencies]
tempfile = "3"
axum-test = "16"
rcgen = { version = "0.13", features = ["x509-parser"] }
tower = { version = "0.5", features = ["util"] }
